<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detail_act"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp"
    tools:context=".detailActivity"
    android:orientation="vertical"
    android:background="@drawable/yard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/Image_detail_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/kosong2"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textV_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="76dp"
            android:gravity="center"
            android:text="@string/nba_title"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textV_pelatih"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="start"
            android:text="@string/pelatih"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/textV_pemilik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/pemilik"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/textV_publishTim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/publishTim"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/textV_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/tags"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/textV_stadionTim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/stadion"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/text_Desc_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:text="@string/deskripsi_tag"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textV_detail_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="15"
            android:text="@string/nba_desc"
            android:textSize="14sp"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:id="@+id/action_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#0000ff"
            android:text="@string/sharebutton"
            />

        </LinearLayout>

    </ScrollView>

</LinearLayout>